# SLI-App

./: .gitignore  .gitmodules  README.md  form1_SPP_Robbin-de-Groot.docx  form_1_start_short_programming_project(1).docx
source/classifier/: .gitignore  CMakeCache.txt  CMakeLists.txt  CNN.cpp  CNN.hpp  Makefile  RCNN.cpp  RCNN.hpp  TestResults.cpp  TestResults.hpp  Toolchain-arm-linux-gnuabihf.cmake  build.sh  cmake_install.cmake  data.cpp  data.hpp  filesread.txt  input_parser.cpp  input_parser.hpp  main.cpp  spp  spp.cbp  test.cpp  test.hpp  train.cpp  train.hpp
source/classifier/environments/: ClassifyEnvironment.cpp  ClassifyEnvironment.hpp  ExecEnvironment.cpp  ExecEnvironment.hpp  KFoldCrossValidationEnv.cpp  KFoldCrossValidationEnv.hpp  TestEnvironment.cpp  TestEnvironment.hpp  TrainEnvironment.cpp  TrainEnvironment.hpp
source/classifier/params/: params_0-0  params_0-1  params_0-2  params_0-3  params_0-4  params_0-5  params_0-6  params_0-7  params_0-8  params_0-9  params_1-0  params_1-1  params_1-2  params_1-3  params_1-4  params_1-5  params_1-6  params_1-7  params_1-8  params_1-9  params_10  params_11  params_13  params_16  params_2-0  params_2-1  params_2-2  params_2-3  params_2-4  params_2-5  params_2-6  params_2-7  params_2-8  params_2-9  params_20  params_26  params_3  params_3-0  params_3-1  params_3-2  (+44 more)
source/classifier/paramsbackup/: params_0  params_14  params_17  params_2  params_21  params_23  params_24  params_25  params_27  params_28  params_31  params_32  params_33  params_36  params_37  params_5  params_8  serialised2.pt  serialised39.pt
(+139 files in other folders)
